--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - '12.6.0'
+  - 12.6.0
 branches:
   only:
   - master
@@ -8,7 +8,7 @@ cache:
   directories:
     - node_modules
 before_install:
-  - openssl aes-256-cbc -K $encrypted_8cad0b092d0a_key -iv $encrypted_8cad0b092d0a_iv -in .travis/id_rsa_travis.enc -out ~/.ssh/id_rsa_travis -d
+  - openssl aes-256-cbc -k $super_secret_password -in .travis/id_rsa_travis.enc -out ~/.ssh/id_rsa_travis -d
   - chmod 600 ~/.ssh/id_rsa_travis
   - eval $(ssh-agent)
   - ssh-add ~/.ssh/id_rsa_travis
