--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - chmod 600 ~/.ssh/id_rsa_travis
   - eval $(ssh-agent)
   - ssh-add ~/.ssh/id_rsa_travis
-  - cp .travis/ssh_config ~/.ssh/config
+  - cp ./.travis/ssh_config ~/.ssh/config
   - git config --global user.name JoashZhao
   - git config --global user.email 1143768516@qq.com
 install:
