--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
   - npm install hexo-cli -g
   - npm install
 script:
-  - npm run deploy
+  - cross-env YUQUE_TOKEN=$yuque_token npm run deploy
